<?xml version="1.0"?>
<package>
  <name>pronto_utils</name>
  <version>0.2.0</version>
  <description>Description</description>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
</package>
